Remove the activation of `sis-javafx` module by the `PATH_TO_FX` property and remove all dependencies of type "test-jar" because those two features are not compatible with Jigsaw modularization in the context of a Maven project. As a consequence, tests do not compile anymore and Maven must be executed as below:
    mvn install -Dmaven.test.skip=true

Tests will be re-enabled after migration to Gradle.